2017-09-22  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Remove content_scripts.css property.

	* tryXpath/background/try_xpath_background.js:
	Define loadCss function.

2017-09-18  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Write description text.

	* tryXpath/scripts/try_xpath_content.js:
	Modify focusItem function.

	* tryXpath/css/try_xpath_insert.css :
	Modify styles.

2017-09-17  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify this file to highlight the ancestors of the focused element.

	* tryXpath/scripts/try_xpath_functions.js:
	Define getAncestorElements function.

	* tryXpath/scripts/try_xpath_content.js:
	Fix makeTypeStr function.

2017-09-16  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/show_all_results.css:
	Fix a table width.

	* tryXpath/popup/popup.css:
	Fix a table width.

	* tryXpath/popup/popup.js:
	Modify genericListener.listeners.showResultsInPopup function. The
	header is shown when the details table is updated.

	* tryXpath/css/try_xpath_insert.css:
	Modify styles.

	* tryXpath/pages/show_all_results.css:
	Modify styles.

	* tryXpath/popup/popup.css:
	Define styles.
	Modify styles.

2017-09-15  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css:
	Create this file.

2017-09-13  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Remove test code.
	Define collectPopupState function.

	* tryXpath/popup/popup.html:
	Add results area.
	Remove test element.

	* tryXpath/popup/popup.js:
	Modify the file to handle results area.

	* tryXpath/scripts/try_xpath_functions.js:
	Copy emptyChildNodes function.

	* tryXpath/popup/popup.js:
	Modify makeExecuteMessage function.
	Modify event listener(window "load") to adapt changing ids.
	
	* tryXpath/popup/popup.html:
	Add resolver area.
	Change element's id.

2017-09-12  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Add context.

	* tryXpath/popup/popup.html: