@@ -1,6 +1,16 @@
 2017-09-22  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/manifest.json:
+	Add "activeTab" to permissions property.
+
+	* tryXpath/scripts/try_xpath_content.js:
+	Modify genericListener.listeners.execute function. This function
+	send "insertCss" event.
+
+	* tryXpath/background/try_xpath_background.js:
+	Define genericListener.listeners.insertCss function.
+
+	* tryXpath/manifest.json:
 	Remove content_scripts.css property.
 
 	* tryXpath/background/try_xpath_background.js:
